--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -717,28 +717,40 @@ make it available as an open-source tool for all sign language research teams.}
   title = {Comprehension of Relative Clauses in Sign Language of the Netherlands: The Role of Iconicity},
   author = {Levestone, Rolland},
   school = {University of Amsterdam},
-  year = {2024}
+  year = {2024},
+  keywords = {bachelorsthesis}
 }
 
 @bachelorsthesis{liesveld:24,
   title = {Lexical Modifications in Child-directed Signing in Sign Language of the Netherlands},
   author = {Liesveld, Simone},
   school = {University of Amsterdam},
-  year = {2024}
+  year = {2024},
+  keywords = {bachelorsthesis}
 }
 
 @bachelorsthesis{ribeiro:24,
   title = {A Lexical Comparison between Cena, Libras and NGT},
   author = {Ribeiro Rossetti, Leticia},
   school = {University of Amsterdam},
-  year = {2024}
+  year = {2024},
+  keywords = {bachelorsthesis}
 }
 
 @bachelorsthesis{deroo:24,
   title = {Familiarity and Iconicity in Lexical Sign in NGT},
   author = {De Roo, Esmée},
   school = {University of Amsterdam},
-  year = {2024}
+  year = {2024},
+  keywords = {bachelorsthesis}
+}
+
+@bachelorsthesis{stern:24,
+  title = {Subject and Object Interpretations in Different Wh-Question Constructions in Sign Language of the Netherlands},
+  author = {Stern, Galya},
+  school = {University of Amsterdam},
+  year = {2024},
+  keywords = {bachelorsthesis}
 }
 
 @mastersthesis{vachaudez:23,
