--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -713,7 +713,7 @@ make it available as an open-source tool for all sign language research teams.}
   url = {https://scripties.uba.uva.nl/search?id=c11101761}
 }
 
-@bachelorsthesis{levestone:24,
+@unpublished{levestone:24,
   title = {Comprehension of Relative Clauses in Sign Language of the Netherlands: The Role of Iconicity},
   author = {Levestone, Rolland},
   school = {University of Amsterdam},
@@ -721,7 +721,7 @@ make it available as an open-source tool for all sign language research teams.}
   keywords = {bachelorsthesis}
 }
 
-@bachelorsthesis{liesveld:24,
+@unpublished{liesveld:24,
   title = {Lexical Modifications in Child-directed Signing in Sign Language of the Netherlands},
   author = {Liesveld, Simone},
   school = {University of Amsterdam},
@@ -729,7 +729,7 @@ make it available as an open-source tool for all sign language research teams.}
   keywords = {bachelorsthesis}
 }
 
-@bachelorsthesis{ribeiro:24,
+@unpublished{ribeiro:24,
   title = {A Lexical Comparison between Cena, Libras and NGT},
   author = {Ribeiro Rossetti, Leticia},
   school = {University of Amsterdam},
@@ -737,7 +737,7 @@ make it available as an open-source tool for all sign language research teams.}
   keywords = {bachelorsthesis}
 }
 
-@bachelorsthesis{deroo:24,
+@unpublished{deroo:24,
   title = {Familiarity and Iconicity in Lexical Sign in NGT},
   author = {De Roo, Esmée},
   school = {University of Amsterdam},
@@ -745,7 +745,7 @@ make it available as an open-source tool for all sign language research teams.}
   keywords = {bachelorsthesis}
 }
 
-@bachelorsthesis{stern:24,
+@unpublished{stern:24,
   title = {Subject and Object Interpretations in Different Wh-Question Constructions in Sign Language of the Netherlands},
   author = {Stern, Galya},
   school = {University of Amsterdam},
