--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -718,7 +718,8 @@ make it available as an open-source tool for all sign language research teams.}
   author = {Levestone, Rolland},
   school = {University of Amsterdam},
   year = {2024},
-  keywords = {bachelorsthesis}
+  keywords = {bachelorsthesis},
+  note = {Bachelor's thesis, University of Amsterdam.}
 }
 
 @unpublished{liesveld:24,
@@ -726,7 +727,8 @@ make it available as an open-source tool for all sign language research teams.}
   author = {Liesveld, Simone},
   school = {University of Amsterdam},
   year = {2024},
-  keywords = {bachelorsthesis}
+  keywords = {bachelorsthesis},
+  note = {Bachelor's thesis, University of Amsterdam.}
 }
 
 @unpublished{ribeiro:24,
@@ -734,7 +736,8 @@ make it available as an open-source tool for all sign language research teams.}
   author = {Ribeiro Rossetti, Leticia},
   school = {University of Amsterdam},
   year = {2024},
-  keywords = {bachelorsthesis}
+  keywords = {bachelorsthesis},
+  note = {Bachelor's thesis, University of Amsterdam.}
 }
 
 @unpublished{deroo:24,
@@ -742,7 +745,8 @@ make it available as an open-source tool for all sign language research teams.}
   author = {De Roo, Esmée},
   school = {University of Amsterdam},
   year = {2024},
-  keywords = {bachelorsthesis}
+  keywords = {bachelorsthesis},
+  note = {Bachelor's thesis, University of Amsterdam.}
 }
 
 @unpublished{stern:24,
@@ -750,7 +754,8 @@ make it available as an open-source tool for all sign language research teams.}
   author = {Stern, Galya},
   school = {University of Amsterdam},
   year = {2024},
-  keywords = {bachelorsthesis}
+  keywords = {bachelorsthesis},
+  note = {Bachelor's thesis, University of Amsterdam.}
 }
 
 @mastersthesis{vachaudez:23,
