fixed mistake in code signlab.bib

--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -700,7 +700,7 @@ make it available as an open-source tool for all sign language research teams.}
 
 @mastersthesis{vanengelen:24,
   title = {The Structural Properties, Use and Variation of Constructed Action in Sign Language of the Netherlands},
-  author = {van Engelen, Merel},
+  author = {Engelen, Merel van},
   school = {University of Amsterdam},
   year = {2024}
 }
