--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -742,7 +742,7 @@ make it available as an open-source tool for all sign language research teams.}
 
 @unpublished{deroo:24,
   title = {Familiarity and Iconicity in Lexical Sign in NGT},
-  author = {De Roo, Esmée},
+  author = {Roo, Esmée de},
   school = {University of Amsterdam},
   year = {2024},
   keywords = {bachelorsthesis},
