--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -1275,3 +1275,28 @@ Results of this investigation contribute fresh data to cross-linguistic studies 
   year = {2023},
   url = {https://www.sintesis.com/claves%20de%20la%20ling%C3%BC%C3%ADstica-200/ling%C3%BCistas%20de%20hoy-ebook-3113.html}
 }
+
+@article{veigabusto:24,
+title = {Paucal pronouns in Catalan Sign Language: a typological rarity?},
+author = {Veiga Busto, Raquel},
+journal = {Sign Language Studies},
+volume = {25},
+number = {1},
+pages = {102-131},
+year = {2024},
+abstract = {The morphological strategies used to express numerosity in the visual modality have been investigated for a number of sign languages.
+However, the meaning associated with these operations remains unexplored in many sign languages. This article investigates the properties of reduplication with movement in Catalan Sign Language
+(LSC) personal pronouns, presenting findings obtained through
+elicitation with two native signers. In contrast to previous descriptions, this study makes a case for a paucal analysis of reduplication
+with movement. The proposal is grounded on different, but interconnected, pieces of evidence. First, like paucal markers, pronouns
+reduplicated with movement have an upper bound cutoff. Second,
+they do not require the entities in the context to be exhausted, and
+their interpretation is analogous to that of the partitive reading of
+the paucal quantifier some (i.e., they are nonexhaustive). Finally, they
+do not enforce the reading that the members of the set referred to
+by the pronoun are picked out separately (i.e., they are nondistributive). The results of this study highlight the need for more detailed
+investigations into the interpretation of number morphemes in sign
+languages and suggest that the array of number values taken to be
+distinguished in sign language personal pronouns might be more
+varied than what is frequently assumed.}
+}
