--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -1,5 +1,19 @@
+@article{Heppe:25,
+    author = {Eline CM Heppe and Michelle Bak and Ulrika Klomp and Marleen Smits and Saskia Damen},
+    title ={Consensus on topics related to defining the functional definition of deafblindness in the Netherlands: A Delphi study},
+    journal = {British Journal of Visual Impairment},
+    volume = {0},
+    number = {0},
+    pages = {02646196251317964},
+    year = {2025},
+    doi = {10.1177/02646196251317964},
+    URL = {https://doi.org/10.1177/02646196251317964},
+    eprint = {https://doi.org/10.1177/02646196251317964},
+    abstract = {In the Netherlands, access to deafblind-specific rehabilitation and education is often based on medical definitions for vision impairment and for hearing loss. However, not everyone with deafblindness (DB) meets these definitions because DB is not solely a result of limitations in bodily functions and structures, but also of limitations in daily functioning. Therefore, using a functional definition that describes a disability in terms of its impact on daily functioning, alongside the medical definitions, would be better suited for determining who needs access to deafblind-specific support. However, such a definition did not yet exist in the Netherlands. To develop a functional definition of DB, consensus among experts (experts-with-lived-experience and experts-with-working-experience) on how to define DB was needed. To investigate the consensus of experts, a Delphi study was conducted, in which 45 Dutch experts participated. The study consisted of a questionnaire with 30 multiple-choice statements on eight topics related to defining DB. After three rounds, consensus was reached on 24 of the 30 multiple-choice statements. These results were used in a follow-up process in which the Dutch functional definition of DB was developed. }
+}
+
 @inproceedings{ranum2024the,
-title={The {NGT}200 Dataset - Geometric Multi-View Isolated Sign Recognition},
+title={The {NGT}200 Dataset - Geometric Multi-View Isolated Sign Recognition}, 
 author={Oline Ranum and David Wessels and Gom{\`e}r Otterspeer and Erik J Bekkers and Floris Roelofsen and Jari I. Andersen},
 booktitle={ICML 2024 Workshop on Geometry-grounded Representation Learning and Generative Modeling},
 year={2024},
