Consistent divider blocks

--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -1,3 +1,25 @@
+@article{veiga:25,
+  title = {The indefinite-interrogative affinity in Catalan Sign Language (LSC)},
+  author = {Veiga Busto, Raquel and Degano, Marco and Roelofsen, Floris},
+  journal = {Sign Language \& Linguistics},
+  volume = {28},
+  number = {1},
+  pages = {49--103},
+  year = {2025},
+  publisher = {John Benjamins Publishing Company Amsterdam/Philadelphia},
+  abstract = {This paper explores the morphology and the licensing conditions of a particular type of indefinite pronouns, referred to as quex-indefinites, which are morphologically identical or closely related to question words. We present findings from two studies investigating these forms in Catalan Sign Language (LSC). The first study is based on elicitation with three LSC consultants, while the second is an online experiment which collected judgments from 50 deaf LSC signers. Our research reveals that LSC quex-indefinites may be either identical to or resemble question words and identifies the semantic categories and environments that allow them. Specifically, quex-indefinites in LSC are possible in the categories of person, quantity, cause, and time. The licensing environments include polar questions, antecedents of conditionals, positive episodic sentences, and some modal environments. This study provides the first description of quex-indefinites in a sign language, contributing to the understanding of the affinity between indefinite and interrogative pronouns.},
+  doi = {10.1075/sll.24002.vei},
+  url = {https://www.jbe-platform.com/content/journals/10.1075/sll.24002.vei}
+}
+
+@inproceedings{shterionov:25,
+  title = {Proceedings of the Third International Workshop on Automatic Translation for Signed and Spoken Languages (AT4SSL)},
+  author = {Shterionov, Dimitar and De Sisto, Mirella and Vanroy, Bram and Vandeghinste, Vincent and Nyst, Victoria and Vermeerbergen, Myriam and Roelofsen, Floris and Lepp, Lisa and Strasly, Irene},
+  booktitle = {Proceedings of the Third International Workshop on Automatic Translation for Signed and Spoken Languages (AT4SSL)},
+  year = {2025},
+  url = {https://lirias.kuleuven.be/retrieve/f9afc8ee-2515-4a8c-baff-eb6cfaa0d7cb}
+}
+
 @article{Heppe:25,
     author = {Eline CM Heppe and Michelle Bak and Ulrika Klomp and Marleen Smits and Saskia Damen},
     title ={Consensus on topics related to defining the functional definition of deafblindness in the Netherlands: A Delphi study},
