--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -12,6 +12,20 @@
   url = {https://www.jbe-platform.com/content/journals/10.1075/sll.24002.vei}
 }
 
+@article{10.ritmeester:25,
+    author = {Ritmeester, Jos and Sümer, Beyza and Boonstra, Marije and de Meulder, Maartje and van der Aa, Belinda and Roelofsen, Floris},
+    title = {Navigating sign language learning: insights from hearing parents of deaf and hard-of-hearing children},
+    journal = {The Journal of Deaf Studies and Deaf Education},
+    pages = {enaf059},
+    year = {2025},
+    month = {10},
+    abstract = {The importance of hearing parents of deaf and hard-of-hearing (DHH) children learning sign language is well documented. However, parents face many challenges in this learning process. This study investigates the experiences of Dutch hearing parents learning Dutch Sign Language (NGT) or Sign-supported Dutch through semi-structured interviews with 21 parents and 6 NGT teachers. The interviews explored parents’ and teachers’ perspectives on parental sign language courses, additional learning materials, and the challenges parents face in learning sign language. The findings highlight the value of DHH teachers and home-based initial courses, as well as the importance of courses aligning with the child’s developmental stage and extending beyond vocabulary level. Both parents and teachers appreciated learning materials that could be used together by parent and child but expressed a need for additional and more elaborate resources. Common challenges included language-specific difficulties, such as mastering sign order and adapting to a visual language, and external barriers, such as difficulties accessing courses and conflicting expert advice regarding the use of sign language. These findings underscore the need for more accessible courses, longer-duration support, and greater consistency among professionals in their advice. This would better support hearing parents in effectively learning sign language and ensuring their DHH children have full access to language from an early age.},
+    issn = {1081-4159},
+    doi = {10.1093/jdsade/enaf059},
+    url = {https://doi.org/10.1093/jdsade/enaf059},
+    eprint = {https://academic.oup.com/jdsde/advance-article-pdf/doi/10.1093/jdsade/enaf059/65023732/enaf059.pdf},
+}
+
 @inproceedings{shterionov:25,
   title = {Proceedings of the Third International Workshop on Automatic Translation for Signed and Spoken Languages (AT4SSL)},
   author = {Shterionov, Dimitar and De Sisto, Mirella and Vanroy, Bram and Vandeghinste, Vincent and Nyst, Victoria and Vermeerbergen, Myriam and Roelofsen, Floris and Lepp, Lisa and Strasly, Irene},
