--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -1,3 +1,37 @@
+@article{joosten2024give,
+  title={{Give Signs—Make Happy: Metaphorical Extension and Grammaticalization of give in Sign Language of the Netherlands}},
+  author={Joosten, Vivianne and Pfau, Roland},
+  journal={Sign Language Studies},
+  volume={25},
+  number={1},
+  pages={53--101},
+  year={2024},
+  publisher={Gallaudet University Press},
+  doi={10.1353/sls.2024.a950717}
+}
+
+@article{pfau2025cross,
+  title={{Cross-modal comparative syntax}},
+  author={Pfau, Roland and Quer, Josep},
+  journal={The Cambridge handbook of comparative syntax},
+  pages={967--999},
+  year={2025},
+  publisher={Cambridge: Cambridge University Press},
+  url={https://www.signlab-amsterdam.nl/publications/Pfau_Quer_2025_CUP.pdf},
+  editor={Barbiers, Sjef and Corver, Norbert and Polinsky, Maria}
+}
+
+@article{pfau2025syntax,
+  title={{On the syntax of color adjectives in DGS and NGT: A corpus-based study}},
+  author={Pfau, Roland and Steinbach, Markus},
+  journal={Rivista di Grammatica Generativa},
+  volume={47},
+  number={11},
+  pages={1--34},
+  year={2025},
+  url={lingbuzz.com/j/rgg/2025/2025.11/}
+}
+
 @article{veiga:25,
   title = {The indefinite-interrogative affinity in Catalan Sign Language (LSC)},
   author = {Veiga Busto, Raquel and Degano, Marco and Roelofsen, Floris},
@@ -806,6 +840,36 @@ make it available as an open-source tool for all sign language research teams.}
   year = {2024},
   keywords = {bachelorsthesis},
   note = {Bachelor's thesis, University of Amsterdam.}
+}
+
+@unpublished{arvilommi:25,
+  title = {{The noun-phrase internal position of property terms in Finnish Sign Language – A corpus study}},
+  author = {Arvilommi, Max},
+  school = {University of Amsterdam},
+  year = {2025},
+  keywords = {bachelorsthesis},
+  note = {Bachelor's thesis, University of Amsterdam.},
+  url = {https://www.signlab-amsterdam.nl/publications/Arvilommi_2025.pdf}
+}
+
+@unpublished{bruinsma:25,
+  title = {{This-one-great-study or Study-great-one-this? On the modality-specificity of a cognitive preference for the N-A-Num-Dem order}},
+  author = {Bruinsma, Sigrid},
+  school = {University of Amsterdam},
+  year = {2025},
+  keywords = {bachelorsthesis},
+  note = {Bachelor's thesis, University of Amsterdam.},
+  url = {https://www.signlab-amsterdam.nl/publications/Bruinsma_2025.pdf}
+}
+
+@unpublished{croonen:25,
+  title = {{PERSON with many personalities: Grammaticalization of the sign PERSON in Sign Language of the Netherlands}},
+  author = {Croonen, Marnix},
+  school = {University of Amsterdam},
+  year = {2025},
+  keywords = {bachelorsthesis},
+  note = {Bachelor's thesis, University of Amsterdam.},
+  url = {https://www.signlab-amsterdam.nl/publications/Croonen_2025.pdf}
 }
 
 @mastersthesis{vachaudez:23,
