--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -1,3 +1,24 @@
+@inproceedings{andersen2025designing,
+title={Designing a Marker Based Motion Capture Setup for Sign Language Research},
+author={Andersen, Jari Ivar and Otterspeer, Gomer and Belleman, Robert and Roelofsen, Floris},
+booktitle={Adjunct Proceedings of the 25th ACM International Conference on Intelligent Virtual Agents},
+pages={1--9},
+abstract={Motion capture systems designed for sign language must meet unique demands: capturing highly detailed hand, face, and body movements while preserving the linguistic and expressive integrity of the performance. This paper documents the iterative development of a marker-based motion capture setup tailored specifically for sign language data collection. Through a combination of hardware configuration, camera placement strategies, and workflow optimizations, we demonstrate how to balance tracking precision with signer comfort and recording efficiency. Our system enables the high-throughput capture of individual signs—up to 500 per day—without relying on post-processing, thereby preserving the authenticity of the performance.
+Beyond presenting the workflow, this paper focuses on sharing insights gained throughout the development process, including the technical and practical challenges of working with a marker-based system. We discuss how issues such as marker size, facial tracking comfort, and infrared interference were addressed through iterative setup design. Currently, the system is optimized for recording isolated signs from a single, front-facing signer, which simplifies setup but limits the range of linguistic data that can be collected. Future work will focus on supporting multi-signer interactions, introducing new challenges in occlusion, camera coverage, and tracking fidelity.},
+url = {https://dl.acm.org/doi/full/10.1145/3742886.3756736},
+year={2025}
+}
+
+@inproceedings{xia2025user,
+title={User Acceptance of Augmented Remote Sign Language Interpreting},
+author={Xia, Zheng Dan and de Meulder, Maartje and Otterspeer, Gom{\`e}r and Roelofsen, Floris},
+booktitle={Adjunct Proceedings of the 25th ACM International Conference on Intelligent Virtual Agents},
+pages={1--9},
+abstract={This research explores a new opportunity for Video-mediated Relay Interpreting (VRI) for Deaf/Hard of Hearing (DHH) users and sign language interpreters, namely the use of Augmented Reality (AR) glasses in VRI. The perspectives of DHH users and interpreters are investigated using the User Acceptance Model (TAM) and the extended, more holistic version, the Unified Theory of Acceptance and Use of Technology (UTAUT) in combination with on-site user testing and evaluation. Results show that interpreters preferred AR VRI over VRI. While DHH users recognized the potential of future advancements, they considered current technology inadequate. The results of interactive unscripted testing in this study contrasted outcomes from previously scripted controlled experiments. Suggestions for future research include examination of tailored hardware for DHH users, studying specific use cases, and investigating the ethical concerns of this technology.},
+url = {https://dl.acm.org/doi/full/10.1145/3742886.3756738},
+year={2025}
+}
+
 @article{joosten2024give,
   title={{Give Signs—Make Happy: Metaphorical Extension and Grammaticalization of give in Sign Language of the Netherlands}},
   author={Joosten, Vivianne and Pfau, Roland},
