--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -1,3 +1,17 @@
+@incollection{klomp_2025_18233952,
+  author       = {Klomp, Ulrika and
+                  Oomen, Marloes and
+                  Pfau, Roland},
+  title        = {Negation in Sign Language of the Netherlands},
+  booktitle    = {Negation in the world's languages II},
+  year         = 2025,
+  publisher    = {Language Science Press},
+  pages        = {37-70},
+  month        = dec,
+  doi          = {10.5281/zenodo.18233952},
+  url          = {https://doi.org/10.5281/zenodo.18233952},
+}
+
 @inproceedings{andersen2025designing,
 title={Designing a Marker Based Motion Capture Setup for Sign Language Research},
 author={Andersen, Jari Ivar and Otterspeer, Gomer and Belleman, Robert and Roelofsen, Floris},
